# kaleido

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  INTEGRATION_GUIDE.md  LICENSE  README.md  SETUP_COMPLETE.md  Taskfile.yml
.github/workflows/: publish.yml  rust.yml
docs/specs/: auth.md
rust/: Cargo.toml
rust/auth/: Cargo.toml
rust/auth/src/: adapters.rs  error.rs  lib.rs  openapi.rs  secrets_manager.rs  services.rs  tokens.rs
rust/auth/src/controllers/: admin.rs  auth.rs  mod.rs  oauth.rs
rust/auth/src/entities/: mod.rs  oauth_providers.rs  refresh_tokens.rs  users.rs
rust/auth/src/extractors/: auth_info.rs  mod.rs  user_context.rs
rust/auth/src/features/: mod.rs
rust/auth/src/services/: api_client.rs  oauth.rs  oauth_provider_service.rs  provider_settings.rs
rust/auth/src/worker/: mod.rs  tasks.rs
rust/auth/src/worker/templates/: password_reset.html  registration.txt
rust/background_jobs/: Cargo.toml
rust/background_jobs/src/: admin.rs  durable.rs  lib.rs  memory.rs  openapi.rs  queue.rs  storage.rs  task.rs
rust/background_jobs/src/entities/: background_tasks.rs  mod.rs
rust/background_jobs/src/worker/: processor.rs  scheduler.rs  task_worker.rs
rust/glass/: Cargo.toml
rust/glass/src/: aggregator.rs  auth_metrics.rs  cooldown.rs  features.rs  lib.rs  metrics_controller.rs  openapi.rs  system_metrics.rs
rust/glass/src/data/: sorting.rs
rust/glass/src/email/: mod.rs  service.rs  templates.rs
rust/glass/src/feature_flags/: admin_controller.rs  controller.rs  mod.rs  service.rs
rust/kaleido/: Cargo.toml
rust/kaleido/src/: lib.rs
rust/kaleido/src/auth/: adapters.rs  cookies.rs  error.rs  mod.rs  openapi.rs  services.rs  tokens.rs  traits.rs
rust/kaleido/src/auth/controllers/: admin.rs  auth.rs  mod.rs  oauth.rs
rust/kaleido/src/auth/entities/: api_clients.rs  auth_events.rs  cooldowns.rs  mod.rs  refresh_tokens.rs  users.rs
rust/kaleido/src/auth/extractors/: auth_info.rs  user_context.rs
rust/kaleido/src/auth/features/: mod.rs
rust/kaleido/src/auth/services/: api_client.rs  oauth.rs  oauth_provider_service.rs  provider_settings.rs
rust/kaleido/src/auth/worker/: mod.rs  tasks.rs
rust/kaleido/src/auth/worker/templates/: password_reset.txt  registration.html
rust/kaleido/src/background_jobs/: admin.rs  durable.rs  error.rs  memory.rs  mod.rs  openapi.rs  queue.rs  storage.rs
rust/kaleido/src/background_jobs/entities/: background_tasks.rs  mod.rs
rust/kaleido/src/background_jobs/worker/: config.rs  metrics.rs  mod.rs  startup.rs  task_worker.rs  tracing.rs
rust/kaleido/src/glass/: aggregator.rs  api_metrics.rs  auth_metrics.rs  background_task_metrics.rs  cooldown.rs  error.rs  features.rs  metrics_controller.rs  mod.rs  openapi.rs  system_metrics.rs
rust/kaleido/src/glass/data/: pagination.rs
rust/kaleido/src/glass/email/: service.rs
rust/kaleido/src/glass/feature_flags/: admin_controller.rs  controller.rs  entities.rs  flags.rs  service.rs  traits.rs
rust/kaleido_migrations/: Cargo.toml
rust/kaleido_migrations/src/: lib.rs  m20220101_000001_users.rs  m20220101_000002_refresh_tokens.rs  m20260107_120000_create_cooldowns.rs  m20260122_120000_background_tasks.rs  m20260124_120500_api_clients.rs  m20260125_212110_create_feature_flags.rs  m20260210_000001_auth_events.rs  m20260312_000000_background_tasks_result.rs  m20260724_000001_remove_oauth_feature_flag.rs  m20260724_000002_rename_oauth_subject_column.rs
scaffold/: .tool-versions  README.md  copier.yml
scaffold/copier-template/: .env.example  Taskfile.yml  [['Cargo.toml']]  compose.yaml
scaffold/copier-template/api/: Cargo.toml  Dockerfile.dev  [['Cargo.toml']]
scaffold/copier-template/api/src/: config.rs  lib.rs  main.rs  metrics.rs  openapi.rs  storage.rs
scaffold/copier-template/api/src/controllers/: mod.rs
scaffold/copier-template/migration/: Cargo.toml
scaffold/copier-template/ui-next/: .env.example  next.config.ts  package.json
scaffold/copier-template/ui-next/app/: layout.tsx  page.tsx
scaffold/copier-template/ui-next/app/admin/: layout.tsx
scaffold/copier-template/ui-next/components/: Navigation.tsx  Providers.tsx  RuntimeConfigScript.tsx
scaffold/copier-template/ui-next/components/admin/: Nav.tsx
scaffold/copier-template/ui-next/lib/: api.ts  config-context.tsx  config.ts  queries.ts
scaffold/copier-template/worker/: Cargo.toml
scaffold/copier-template/worker/src/: main.rs
scaffold/copier-template/worker/src/tasks/: mod.rs
scaffold/copier-template/{% if frontend in ['next', 'both'] %}ui-next{% endif %}/: Dockerfile  Dockerfile.dev  Dockerfile.prod  package.json
scaffold/copier-template/{% if frontend in ['next', 'both'] %}ui-next{% endif %}/app/: layout.tsx
scaffold/copier-template/{% if frontend in ['next', 'both'] %}ui-next{% endif %}/app/admin/: page.tsx
scaffold/copier-template/{% if frontend in ['next', 'both'] %}ui-next{% endif %}/components/: AuthRouter.tsx  Navigation.tsx  Providers.tsx
scaffold/copier-template/{% if frontend in ['next', 'both'] %}ui-next{% endif %}/components/admin/: Nav.tsx
scaffold/copier-template/{% if frontend in ['react', 'both'] %}ui{% endif %}/: Dockerfile  Dockerfile.dev  index.html  package.json  tsconfig.json  vite.config.ts
scaffold/copier-template/{% if frontend in ['react', 'both'] %}ui{% endif %}/src/: App.tsx  index.css  main.tsx
scaffold/copier-template/{% if frontend in ['react', 'both'] %}ui{% endif %}/src/components/: Navigation.tsx
scaffold/copier-template/{% if frontend in ['react', 'both'] %}ui{% endif %}/src/lib/: api.ts  kaleido.ts
scaffold/templates/api/: Cargo.toml
scaffold/templates/api/src/: config.rs  lib.rs  openapi.rs
scaffold/templates/api/src/controllers/: mod.rs
scaffold/templates/api/src/tasks/: adapter.rs
scaffold/templates/common/: .env.example  Taskfile.yml  compose.yaml
scaffold/templates/migration/: Cargo.toml
scaffold/templates/migration/src/: lib.rs
scaffold/templates/worker/: Cargo.toml  Dockerfile.dev
scripts/: release-npm.sh
typescript/: package-lock.json  package.json
(+7 files in other folders)
