[workspace]
resolver = "2"

members = [
    "rust/auth",
    "rust/background_jobs",
    "rust/kaleido_migrations",
    "rust/glass",
]

exclude = [
    "scaffold",
    "scaffold/**",
    "typescript",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Eric Butera <eric.butera@gmail.com>"]
license = "MIT"
repository = "https://github.com/ericbutera/kaleido"

[workspace.dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
sea-orm = { version = "2.0.0-rc.27", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
argon2 = "0.5"
jsonwebtoken = "9.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
validator = { version = "0.18", features = ["derive"] }
oauth2 = "4.4"
once_cell = "1.20"
url = "2.5"
http = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
