[workspace]
resolver = "2"

members = [
    "auth",
    "background_jobs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/kaleido"

[workspace.dependencies]
# Common dependencies used across crates
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
async-trait = "0.1"
futures = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Crypto
argon2 = "0.5"
jsonwebtoken = "9.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
rand = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# OAuth
oauth2 = "4.4"

# AWS
aws-config = "1.5"
aws-sdk-secretsmanager = "1.49"

# Utilities
once_cell = "1.20"
url = "2.5"
http = "1.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
