[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# Async
async-trait = { workspace = true }

# Database
sea-orm = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Validation
validator = { workspace = true }

# JWT & Auth
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Time
chrono = { workspace = true }

# Async
tokio = { workspace = true }

# Utilities
uuid = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono"] }

# Tracing
tracing = { workspace = true }

# HTTP client for OAuth
reqwest = { workspace = true }
oauth2 = { workspace = true }

# AWS for secrets management (optional)
# removed: aws-config and aws-sdk-secretsmanager (no longer used)

# URL parsing
url = { workspace = true }

# HTTP
http = { workspace = true }

# GCP auth helper (optional)
gcp_auth = { version = "0.12", optional = true }
base64 = "0.21"
google-secretmanager1 = { version = "*", optional = true }
yup-oauth2 = { version = "7", optional = true }
hyper-util = { version = "0.1", optional = true }
hyper-rustls = { version = "0.23", optional = true }

[features]
default = []
gcp-secrets = ["gcp_auth", "google-secretmanager1", "yup-oauth2", "hyper-util", "hyper-rustls"]

[dev-dependencies]
