[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
tower-http = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
tracing = { workspace = true }
reqwest = { workspace = true }
oauth2 = { workspace = true }
url = { workspace = true }
http = { workspace = true }
base64 = "0.21"
yup-oauth2 = { version = "7", optional = true }
hyper-util = { version = "0.1", optional = true }
hyper-rustls = { version = "0.23", optional = true }

[features]
default = []
gcp-secrets = ["yup-oauth2", "hyper-util", "hyper-rustls"]

[dev-dependencies]
