[package]
name = "background_jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sea-orm = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
default = []
durable = ["sea-orm"]
