[package]
name = "background_jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
cron = "0.12"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
prometheus = "0.14"
sea-orm = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[features]
default = []
durable = ["sea-orm"]
