[package]
name = "glass"
version = "0.0.1"
edition = "2021"

[dependencies]
auth = { path = "../auth" }
axum = { workspace = true }
chrono = { workspace = true }
open-feature = "0.2.7"
sea-orm = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
