[package]
name = "kaleido"
version = "0.2.0"
edition = "2021"

[dependencies]
# Web framework
axum = { workspace = true }
tower-http = { workspace = true }
# Async
async-trait = { workspace = true }
tokio = { workspace = true }
# Database
sea-orm = { workspace = true }
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
# Validation
validator = { workspace = true }
# Auth
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
base64 = "0.21"
# Time
chrono = { workspace = true }
# Utilities
uuid = { workspace = true }
once_cell = { workspace = true }
url = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
# HTTP client
reqwest = { workspace = true }
# OAuth
oauth2 = { workspace = true }
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Background jobs
cron = "0.12"
prometheus = "0.14"
# Email
handlebars = "5.1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-native-tls", "builder", "hostname"] }
# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
# Feature flags
open-feature = "0.2.7"

# Optional GCP secrets support
yup-oauth2 = { version = "7", optional = true }
hyper-util = { version = "0.1", optional = true }
hyper-rustls = { version = "0.23", optional = true }

[features]
default = []
gcp-secrets = ["yup-oauth2", "hyper-util", "hyper-rustls"]
