[package]
name = "kaleido_migrations"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.85.0"

[lib]
name = "kaleido_migrations"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
version = "2.0.0-rc.27"
features = ["runtime-tokio-native-tls", "sqlx-postgres", "sqlx-sqlite"]
