[package]
name = "api"
version = "0.1.0"
edition = "2021"
autobins = false

{% raw %}[[bin]]{% endraw %}
name = "api"
path = "src/main.rs"

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }
tower-http = { workspace = true }
async-trait = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
migration = { path = "../migration" }

auth = { git = "https://github.com/ericbutera/kaleido", branch = "main" }
background_jobs = { git = "https://github.com/ericbutera/kaleido", branch = "main", features = ["durable"] }
glass = { git = "https://github.com/ericbutera/kaleido", branch = "main" }
