[package]
name = "worker"
version = "0.1.0"
edition = "2021"
autobins = false

{% raw %}[[bin]]{% endraw %}
name = "worker"
path = "src/main.rs"

[lib]
name = "worker"
path = "src/lib.rs"

[dependencies]
api = { path = "../api" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
background_jobs = { git = "https://github.com/ericbutera/kaleido", branch = "main", features = ["durable"] }
auth = { git = "https://github.com/ericbutera/kaleido", branch = "main" }
glass = { git = "https://github.com/ericbutera/kaleido", branch = "main" }
