[package]
name = "worker"
version = "0.1.0"
edition = "2021"
autobins = false

{% raw %}[[bin]]{% endraw %}
name = "worker"
path = "src/main.rs"

[lib]
name = "worker"
path = "src/lib.rs"

[dependencies]
api = { path = "../api" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
kaleido = { git = "https://github.com/ericbutera/kaleido", branch = "main" }
